k8s-istio-app/cart/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cart-canary
  namespace: demo
spec:
  ports:
  - port: 3002
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: cart

---
apiVersion: v1
kind: Service
metadata:
  name: cart-stable
  namespace: demo

spec:
  ports:
  - port: 3002
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: cart
